--- a/Makefile.isp
+++ b/Makefile.isp
@@ -24,7 +24,7 @@ COMMON_CMAKE_FLAGS += -DLLVM_BINUTILS_INCDIR=/usr/include
 COMMON_CMAKE_FLAGS += -DBUILD_SHARED_LIBS=True
 COMMON_CMAKE_FLAGS += -DLLVM_OPTIMIZED_TABLEGEN=True
 COMMON_CMAKE_FLAGS += -DLLVM_BUILD_TESTS=True
-COMMON_CMAKE_FLAGS += -DDEFAULT_SYSROOT=$(ISP_PREFIX)riscv32-unknown-elf
+COMMON_CMAKE_FLAGS += -DDEFAULT_SYSROOT=$(ISP_PREFIX)/riscv32-unknown-elf
 COMMON_CMAKE_FLAGS += -DLLVM_DEFAULT_TARGET_TRIPLE="riscv32-unknown-elf"
 COMMON_CMAKE_FLAGS += -DLLVM_EXPERIMENTAL_TARGETS_TO_BUILD="RISCV"
 COMMON_CMAKE_FLAGS += -DLLVM_TARGETS_TO_BUILD=""
